docs: create delete user by id doc
